--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.10,<3.15"
 dependencies = [
-    "scikit-learn (==1.5.0)",
+    "scikit-learn (>=1.5.0)",
     "numpy (>=1.17)",
     "scipy (>=1.3)",
     "pandas (>=0.25)",
